# libloot

./: .gitignore  .readthedocs.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.md  appveyor.yml  build.rs  clippy.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
array-parameterized-test/: Cargo.toml  README.md
array-parameterized-test/src/: lib.rs
array-parameterized-test/tests/: integration_test.rs  realistic.rs
cmake/: Config.cmake.in  tests.cmake
cpp/: .runsettings  CMakeLists.txt  Cargo.toml  Doxyfile  README.md  build.rs
cpp/cmake/: tests.cmake  toolchain-mingw64.cmake
cpp/docs/: conf.py  pyproject.toml
cpp/docs/api/: Doxyfile  credits.rst  introduction.rst  miscellaneous.rst  reference.rst  sorting.rst
cpp/docs/api/licenses/: dependency-notices.rst
cpp/docs/licenses/: MIT License (spdlog).txt  notice.rst  texts.rst
cpp/docs/metadata/: changelog.rst  file_structure.rst  introduction.rst
cpp/docs/metadata/data_structures/: file.rst  group.rst  plugin.rst  tag.rst
cpp/include/loot/: api.h  api_decorator.h  database_interface.h  game_interface.h  loot_version.h  plugin_interface.h  vertex.h
cpp/include/loot/enum/: edge_type.h  game_type.h  log_level.h  message_type.h
cpp/include/loot/exception/: cyclic_interaction_error.h  error_categories.h  plugin_not_loaded_error.h  undefined_group_error.h
cpp/include/loot/metadata/: conditional_metadata.h  file.h  filename.h  group.h  location.h  message.h  message_content.h  plugin_cleaning_data.h  plugin_metadata.h  tag.h
cpp/scripts/: OpenCppCoverage.bat  licenses.py
cpp/src/: database.rs  error.rs  game.rs  lib.rs  metadata.rs  plugin.rs
cpp/src/api/: api.cpp  convert.cpp  convert.h  database.cpp  database.h  exception.cpp  game.cpp  game.h  plugin.cpp  plugin.h  resource.rc  vertex.cpp
cpp/src/api/exception/: cyclic_interaction_error.cpp  error_categories.cpp  exception.cpp  exception.h  undefined_group_error.cpp
cpp/src/api/metadata/: file.cpp  filename.cpp  group.cpp  location.cpp  message.cpp  message_content.cpp  plugin_cleaning_data.cpp  plugin_metadata.cpp  tag.cpp
cpp/src/tests/: common_game_test_fixture.h  printers.h  resource.rc  test_helpers.h
cpp/src/tests/api/interface/: api_game_operations_test.h  create_game_handle_test.h  database_interface_test.h  game_interface_test.h  is_compatible_test.h  main.cpp  plugin_interface_test.h
cpp/src/tests/api/interface/metadata/: file_test.h  filename_test.h  group_test.h  location_test.h  message_content_test.h  message_test.h  plugin_cleaning_data_test.h  plugin_metadata_test.h  tag_test.h
cpp/src/tests/api/internals/: main.cpp
cpp/src/tests/api/internals/metadata/: conditional_metadata_test.h  file_test.h  message_content_test.h  plugin_cleaning_data_test.h  plugin_metadata_test.h  tag_test.h
cxx/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.toml
cxx/.cargo/: msvc-debug-config.toml
cxx/cmake/: tests.cmake
cxx/include/loot/: api.h  game_interface.h  loot_version.h
cxx/include/loot/enum/: edge_type.h
cxx/include/loot/exception/: condition_syntax_error.h  cyclic_interaction_error.h  undefined_group_error.h
cxx/include/loot/metadata/: filename.h  location.h  message.h  message_content.h
cxx/src/: database.rs  error.rs  error_codes.rs  game.rs  lib.rs  metadata.rs  plugin.rs
cxx/src/api/: api.cpp  convert.cpp  convert.h  database.cpp  database.h  exception.cpp  game.cpp  game.h  plugin.cpp  plugin.h  resource.rc  vertex.cpp
cxx/src/api/metadata/: conditional_metadata.cpp  file.cpp  filename.cpp  group.cpp  location.cpp  message.cpp  message_content.cpp  plugin_cleaning_data.cpp  plugin_metadata.cpp  tag.cpp
cxx/src/api/sorting/: undefined_group_error.cpp
cxx/src/tests/: common_game_test_fixture.h  test_helpers.h
cxx/src/tests/api/interface/: database_interface_test.h  game_interface_test.h  main.cpp
cxx/src/tests/api/internals/: main.cpp
cxx/src/tests/api/internals/metadata/: group_test.h  location_test.h  message_test.h
docs/: README.md  conf.py  index.rst  pyproject.toml  requirements.txt
docs/api/: Doxyfile  changelog.rst  cpp_api_reference.rst  credits.rst  introduction.rst  miscellaneous.rst  reference.rst  rust_api_reference.rst  sorting.rst
docs/licenses/: texts.rst
docs/metadata/: changelog.rst  conditions.rst  file_structure.rst  introduction.rst
docs/scripts/: licenses.py
ffi-errors/: Cargo.toml
ffi-errors/src/: esplugin.rs  lci.rs  lib.rs  libloadorder.rs
include/loot/: api.h  database_interface.h  game_interface.h  loot_version.h  plugin_interface.h
nodejs/: .gitignore  Cargo.toml  README.md  index.js  package-lock.json  package.json
nodejs/.github/workflows/: CI.yml
nodejs/__test__/: index.spec.mjs
nodejs/npm/linux-x64-gnu/: README.md  package.json
nodejs/npm/win32-x64-msvc/: README.md  package.json
nodejs/src/: database.rs  error.rs  game.rs  lib.rs  metadata.rs  plugin.rs
parameterized-test/: Cargo.toml
parameterized-test/src/: lib.rs
pyo3/: Cargo.toml  README.md
pyo3/src/: database.rs  error.rs  game.rs  lib.rs  metadata.rs  plugin.rs
python/: Cargo.toml  README.md  pyproject.toml
python/src/: database.rs  error.rs  game.rs  lib.rs  metadata.rs  plugin.rs
scripts/: set_version_number.py
scripts/travis/: libloot.bintray.json  loot-api.bintray.json
src/: database.rs  error.rs  game.rs  lib.rs  logging.rs  plugin.rs  tests.rs  version.rs
src/api/: api.cpp  api_database.cpp  api_database.h  bsa.cpp  bsa.h  bsa_detail.h  error_categories.cpp  loot_version.cpp.in  masterlist.cpp  masterlist.h  metadata_list.cpp  metadata_list.h  plugin.cpp  plugin.h  resource.rc  vertex.cpp
src/archive/: ba2.rs  bsa.rs  error.rs  find.rs  mod.rs  parse.rs
src/database/: conditions.rs  error.rs  mod.rs
src/metadata/: error.rs  file.rs  group.rs  location.rs  message.rs  metadata_document.rs  mod.rs  plugin_cleaning_data.rs  plugin_metadata.rs  tag.rs  yaml.rs  yaml_emit.rs
src/plugin/: error.rs  mod.rs
supply-chain/: audits.toml  config.toml
(+167 files in other folders)
